add roles, the btbrole command and custom items add lightning custom item for knights enable world force copy in dev setup